<resources>
    <string name="app_name" translatable="false">PetShoppe</string>
    <string name="close">Close</string>
    <string name="PETSHOP">PET SHOP</string>
    <string name="THUY">TRẠM THÚ Y</string>
    <string name="atm">ATM</string>
    <string name="back">Trang Chính</string>
    <string name="airports">Education</string>
    <string name="search">Search…</string>
    <string name="nav_explore">
Khám phá</string>
    <string name="nav_search">Tìm kiếm</string>
    <string name="nav_search_on_map">Maps</string>
    <string name="share">Chia sẻ</string>
    <string name="rate_us">Đánh giá</string>
    <string name="loading">Loading…</string>
    <string name="one" translatable="false">1</string>
    <string name="filter_animals">Lọc </string>
    <string name="dogs">Chó</string>
    <string name="cats">Mèo</string>
    <string name="hamster" translatable="false">Hamster</string>
    <string name="birds">Chim</string>
    <string name="consultations">Tham vấn</string>
    <string name="weHaveAProblem">Chúng tôi gặp sự cố với máy chủ của mình.\nHãy thử lại sau</string>
    <string name="select_payment_method">Select a payment method.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="weve_sent_youanEmail_password">Chúng tôi đã gửi cho bạn một email để bạn có thể thay đổi mật khẩu của mình.</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="sing_in">Đăng Nhập</string>
    <string name="forgot_your_password_recover">Quên mật khẩu?</string>
    <string name="sing_up"><u>Đăng Ký</u></string>
    <string name="remember_me">Nhớ mật khẩu</string>
    <string name="create_account">Tạo mật khẩu</string>
    <string name="first_name">Tên</string>
    <string name="last_name">Họ</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="minimum_eight_characters">Minimum 8 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="haveAccount_signIn">Đã có tài khoản <b>Đăng Nhập.</b></string>
    <string name="necessary_to_insert_the_last_name">Cần thiết để chèn họ</string>
    <string name="necessary_to_insert_the_First_name">Cần thiết để chèn tên</string>
    <string name="email_required">Email, cpf or username is required</string>
    <string name="informed_email_is_invalid">Informed email is invalid</string>
    <string name="password_required">Password required</string>
    <string name="password_cannot_contain_spaces">Password cannot contain spaces</string>
    <string name="password_needs">Mật khẩu của bạn cần có ít nhất 8 ký tự, 1 chữ cái, 1 số và một ký tự đặc biệt</string>
    <string name="forgot_the_password">FORGOT PASSWORD?</string>
    <string name="authFailed_thisEmail">Authentication failed!\nThis email is already registered.</string>
    <string name="hello_emailSend">Xin chào, người dùng của bạn đã được đăng ký thành công:) \ nChúng tôi đã gửi một email xác minh đến email đã đăng ký, vui lòng xác nhận trong email trước khi đăng nhập.</string>
    <string name="ok_i_will_confirm">OK, I will confirm</string>
    <string name="txt_weVerify_email_not_verified">Chúng tôi xác minh rằng email của bạn chưa được xác nhận, vui lòng xác nhận tài khoản của bạn bằng email chúng tôi đã gửi cho bạn.</string>
    <string name="invalidEmailOrPassword">Email hoặc mật khẩu không hợp lệ.</string>
    <string name="next">Next </string>
    <string name="skip">Skip</string>
    <string name="pair_my_fountain">Pair my fountain</string>
    <string name="text_one_devicePresentation">đặt đồ ăn nước uống cho thú cưng</string>
    <string name="bluetooth_enable_success">Mở bluetooth thành công</string>
    <string name="bluetooth_couldnt_success">Bluetooth couldn\'t be enabled</string>
    <string name="no_paired_device">
Không tìm thấy thiết bị được ghép nối nào, vui lòng ghép nối thiết bị </string>
    <string name="connecting">Connecting</string>
    <string name="tips_pair_device">Pairing Tips</string>
    <string name="tip01">1 - Turn on your phone\'s bluetooth;</string>
    <string name="tip02">2 - Click on Palace_Fountain;</string>
    <string name="tip03">3 - Then click Connect;</string>
    <string name="tip04">4 - Then return here and click on continue.</string>
    <string name="tip05_connect">Nếu bạn không thể kết nối, vui lòng liên hệ với PETshope</string>
    <string name="txt_continue">Continue</string>
    <string name="could_connect_verify_device">Could not connect to device.\nPlease verify if your device is on.</string>
    <string name="noProblem_lets_help_you">NO PROBLEM,\nLET\'S HELP YOU.</string>
    <string name="change_password">Change Password</string>
    <string name="put_water">PUT WATER</string>
    <string name="put_racao">PLACE RATION</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="really_want_logOut">Bạn có muốn đăng xuất!</string>
    <string name="logout">LogOut</string>
    <string name="historic">LỊCH SỬ MUA HÀNG</string>
    <string name="leave">Leave</string>
    <string name="personalname">Personal Name</string>
    <string name="emailexample" translatable="false">emailexample@gmail.com</string>
    <string name="cpfExample" translatable="false">000000000</string>
    <string name="cepexample" translatable="false">00000-000</string>
    <string name="address">Address</string>
    <string name="editProfile">Edit Profile</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_upload_method">Select the upload method</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="camera">Camera</string>
    <string name="cpf">Số điện thoại</string>
    <string name="cep">ZIPCODE</string>
    <string name="couldnt_insert">Couldn\'t insert your profile image</string>
    <string name="select_an_image">Select an image</string>
    <string name="uploadFailed">Upload failed please try again later</string>
    <string name="title_activity_register_address" translatable="false">Map</string>
    <string name="register_address">REGISTER ADDRESS</string>
    <string name="street">Địa chỉ</string>
    <string name="number">Số điện thoại</string>
    <string name="home" translatable="false">TRANG CHÍNH</string>
    <string name="palaceFountain">KHU THÀNH VIÊN VIP</string>
    <string name="myOrders">ĐƠN HÀNG CỦA TÔI</string>
    <string name="zipCode_is_invalid">ZipCode is invalid</string>
    <string name="error_in_get_your_address">Error in get your address</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="your_address_updated_successfully">Your address has been updated successfully</string>
    <string name="zipcode_field_incorretly">Zip code field is incorrectly filled</string>
    <string name="street_field_incorretly">Street field is incorrectly filled</string>
    <string name="number_field_incorretly">Number field is incorrectly filled</string>
    <string name="phone">Phone</string>
    <string name="edit_address">Edit my Address</string>
    <string name="products">CÁC SẢN PHẨM</string>
    <string name="lowest_price">GIÁ THẤP NHẤT</string>
    <string name="biggest_price">GIÁ CAO NHẤT</string>
    <string name="popular" translatable="false">Phổ biến</string>
    <string name="less" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="buyNow">Mua Ngay</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="price">GIÁ</string>
    <string name="cpfinformedisInvalid">SĐT không tồn tại</string>
    <string name="my_shopping_cart">GIỎ HÀNG</string>
    <string name="your_ShoppingCart_asEmpty">GIỎ HÀNG CỦA BẠN HIỆN TRỐNG.</string>
    <string name="see_products">XEM NHIỀU SẢN PHẨM</string>
    <string name="you_dont_haveAddressRegistered">BẠN CHƯA CÓ ĐỊA CHỈ ĐĂNG KÝ.</string>
    <string name="sign_up_now">ĐĂNG KÍ NGAY!</string>
    <string name="sign_up_latter">ĐĂNG KÍ SAU</string>
    <string name="ex_shelfLife_card" translatable="false">XX/XX</string>
    <string name="ex_numberCard_card" translatable="false">•••• •••• •••• ••••</string>
    <string name="fulanodetal" translatable="false">Falano de Tal</string>
    <string name="myCards">THẺ CỦA TÔI</string>
    <string name="registered_cards">ĐĂNG KÍ THẺ</string>
    <string name="no_card_registered">KHÔNG CÓ THẺ ĐĂNG KÍ</string>
    <string name="add_card">THÊM THẺ</string>
    <string name="add_new_card">Thêm thẻ mới</string>
    <string name="cardNumber">Số Thẻ</string>
    <string name="expiration_date">Ngày hết hạn</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="name_printed_on_the_card">Tên in trên thẻ</string>
    <string name="no_flag_selected">Thẻ không được yêu cầu</string>
    <string name="cardNumber_wrongInsert">Số thẻ không chính xác</string>
    <string name="shelfLife_incorrectly">Hạn hết hạn không chính xác</string>
    <string name="cvv_inserted_incorrectly">CVV chèn không chính xác</string>
    <string name="name_incorrectly_inserted">Name nhập vào không chính xác</string>
    <string name="yours_cards">THẺ CỦA BẠN</string>
    <string name="remove_registred_card">Bạn có muốn xóa bỏ thẻ đã đăng kí?</string>
    <string name="remove">Xóa</string>
    <string name="card_not_found">Thẻ không tồn tại</string>
    <string name="services">DỊCH VỤ</string>
    <string name="choose_a_service">DỊCH VỤ</string>
    <string name="veterinary_consultation">TÁN GẪU CÙNG PET ẢO</string>
    <string name="bath_and_tosa">TƯ VẤN DỊCH VỤ VỚI CHUYÊN GIA</string>
    <string name="schedule_consultation">VÀO NGAY</string>
    <string name="schedule_bath_and_tosa">TƯ VẤN CHĂM SÓC, TẮM VÀ LÀM ĐẸP</string>
    <string name="select_a_time">Chọn thời gian</string>
    <string name="select_a_date">Chọn ngày</string>
    <string name="its_not_possible_scheduleYear">Không thể lên lịch một cuộc hẹn vào năm nhất định.</string>
    <string name="its_not_possible_scheduleMonth">Không thể lên lịch một cuộc hẹn vào tháng nhất định.</string>
    <string name="its_not_possible_scheduleDay">
Không thể đặt lịch hẹn vào ngày đã thông báo.</string>
    <string name="sorryButPalaceWillBeCosed">Xin lỗi, nhưng vào thời gian đã chọn, PetShope sẽ đóng cửa</string>
    <string name="description">Miêu tả..</string>
    <string name="to_schedule">LÊN LỊCH</string>
    <string name="select_your_pet">Chọn thú cưng của bạn.</string>
    <string name="select_a_veterinarian">Chọn một bác sĩ thú y.</string>
    <string name="WITHDRAWAL_DELIVERY">RÚT TIỀN / GIAO HÀNG</string>
    <string name="optionOneDeliveryMethod">1 - Tôi sẽ đưa Thú cưng | Nhận tại nơi ở</string>
    <string name="optionTwoDeliveryMethod">2 - Tôi sẽ lấy Pet | Rút tiền trong PetShop</string>
    <string name="optionThreeDeliveryMethod">3 - PetShop sẽ lấy con vật | Tôi sẽ rút tiền trong PetShop</string>
    <string name="optionFourDeliveryMethod">4 - PetShop sẽ lấy thú | Nhận tại nơi ở</string>
    <string name="add_to_cart">THÊM VÀO GIỎ HÀNG</string>
    <string name="one_is_the_minumum_quantity"> 1 là số lượng tối thiểu</string>
    <string name="maximum_amount_reached">Đã đạt đến số lượng tối đa, chỉ có thể thêm vào giỏ hàng của bạn 20 đơn vị sản phẩm.</string>
    <string name="see_my_pets">Xem thú cưng của tôi</string>
    <string name="inappropriateUserName">Chúng tôi nhận thấy rằng tên đã nhập cho người dùng của bạn không phù hợp, vui lòng thay đổi nó.</string>
    <string name="birth_date">Birth Date</string>
    <string name="warning_no_stock">Chúng tôi xin lỗi vì sự bất tiện này, hiện tại chúng tôi đã hết hàng trong sản phẩm này!!</string>
    <string name="no_stock">KHÔNG CÓ CỔ PHẦN</string>
    <string name="qrcode">QrCode</string>
    <string name="help">GIÚP ĐỠ</string>
</resources>