<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_sheet_user"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:padding="20dp"
    android:background="@drawable/background_menu_sheet"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <!-- Container User Info -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_user_profile_sheet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <!-- User Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_ProfileUser_sheetMenu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/q"
            android:visibility="visible"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RedundantNamespace" />

        <!-- User Name -->
        <TextView
            android:id="@+id/txt_nmUser_Sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_ProfileUser_sheetMenu"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Btn Fountain -->

    <!-- Btn My Orders -->


    <!-- Btn My Cards -->

    <androidx.cardview.widget.CardView
        android:id="@+id/BtnMyCardsSheetUserMenu"
        android:layout_width="265dp"
        android:layout_height="89dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="9dp"
        app:cardBackgroundColor="@color/selected_menu_sheet"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/BtnLogOutSheetMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <!-- Container My Cards -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Img My Cards -->
            <ImageView
                android:id="@+id/Img_BtnMyCardsSheetMenu"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintBottom_toTopOf="@+id/txt_sheet_MyCards"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <!-- Text My Cards -->
            <TextView
                android:id="@+id/txt_sheet_MyCards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:text="TƯ VẤN ONLINE"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Btn LogOut -->
    <androidx.cardview.widget.CardView
        android:id="@+id/BtnLogOutSheetMenu"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/selected_menu_sheet"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Container LogOut -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Img LogOut -->
            <ImageView
                android:id="@+id/Img_BtnLogOutSheetMenu"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/logout_sheetmenu"
                app:layout_constraintBottom_toTopOf="@+id/txt_sheet_LogOut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <!-- Text LogOut -->
            <TextView
                android:id="@+id/txt_sheet_LogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Btn Help -->
    <androidx.cardview.widget.CardView
        android:id="@+id/BtnHelpSheetMenu"
        android:layout_width="150dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/selected_menu_sheet"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Container LogOut -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Img LogOut -->
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_information"
                app:layout_constraintBottom_toTopOf="@+id/txt_sheet_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <!-- Text LogOut -->
            <TextView
                android:id="@+id/txt_sheet_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="269dp"
        android:layout_height="89dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Img Shopping Cart -->
        <ImageView
            android:id="@+id/Img_BtnMyShoppingCartSheetMenu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/bg_address_alert"
            app:layout_constraintBottom_toTopOf="@+id/txt_sheet_ShoppingCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <!-- Text Shopping Cart -->
        <TextView
            android:id="@+id/txt_sheet_ShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/my_shopping_cart"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>