<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator"
    android:orientation="vertical"
    tools:context=".Data.User.MapsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <fragment
            android:id="@+id/map"
            
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="0dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--            <TextView-->
            <!--                android:id="@+id/search_text_view"-->
            <!--                style="@style/selectedBackground"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginEnd="20dp"-->
            <!--                android:layout_marginBottom="20dp"-->
            <!--                android:background="@drawable/rounded_corners"-->
            <!--                android:elevation="5dp"-->
            <!--                android:gravity="center_vertical"-->
            <!--                android:paddingStart="20dp"-->
            <!--                android:paddingEnd="20dp"-->
            <!--                android:text="@string/search_a_place"-->
            <!--                android:textColor="@android:color/black"-->
            <!--                android:textSize="20sp"-->
            <!--                app:drawableEndCompat="@drawable/search_icon"-->
            <!--                app:drawableTint="@color/black" />-->
            <androidx.cardview.widget.CardView
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/alice_blue"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">


                <ImageView
                    android:id="@+id/ic_btnMicro"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:onClick="getSpeech"
                    android:src="@drawable/ic_baseline_mic_24" />

                <EditText
                    android:id="@+id/input_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/ic_btnMicro"
                    android:background="@null"
                    android:hint="Nhập địa điểm"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout2"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="21dp">

                    <RelativeLayout
                        android:id="@+id/rel_layout_1"
                        style="@style/selectedBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_adapter_pets"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_baseline_medical_services_24"
                            app:tint="@color/black" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/THUY"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="21dp">

                    <RelativeLayout
                        android:id="@+id/rel_layout_2"
                        style="@style/selectedBackground"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_adapter_pets"
                        android:elevation="40dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_baseline_pets_24"
                            app:tint="@color/black" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/PETSHOP"
                    android:textStyle="bold"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="21dp">

                    <RelativeLayout
                        android:id="@+id/rel_layout_3"
                        style="@style/selectedBackground"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_adapter_pets"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"

                            android:src="@drawable/ic_baseline_atm_24" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/atm"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="21dp">

                    <RelativeLayout
                        android:id="@+id/rel_layout_4"
                        style="@style/selectedBackground"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_adapter_pets"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"

                            android:src="@drawable/back_arrow_icon" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/back"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/current_loc"
            style="@style/current_loc_fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:elevation="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/travel_mode_btn"
        style="@style/travel_mode_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="20dp" />

    <include
        android:id="@+id/loc_info_sheet"
        layout="@layout/place_info"
        app:layout_anchor="@+id/constraintLayout2"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>